--- a/frontend/styles/Home.module.css
+++ b/frontend/styles/Home.module.css
@@ -79,33 +79,7 @@
   animation-delay: 0.75s;
 }
 
-/* fadeinアニメーション 下から上 */
-.fadein {
-  width: 100%;
-  height: 40%;
-  z-index: 10;
-  position: absolute;
-  bottom: 0;
-  left: 0;
-  opacity: 0;
-  animation-name: fadein;
-  animation-duration: 0.5s;
-  animation-timing-function: ease-out;
-  animation-fill-mode: forwards;
-}
-
-@keyframes fadein {
-  0% {
-    opacity: 0;
-    transform: translateX(-1000px);
-  }
-
-  100% {
-    opacity: 1;
-    transform: translateX(0);
-  }
-}
-
+/* action component表示のアニメーション */
 .fadeout {
   position: fixed;
   width: 100%;
