--- a/frontend/styles/globals.css
+++ b/frontend/styles/globals.css
@@ -56,3 +56,11 @@
   background-color: #95913f;
   color: #2d2d2d;
 }
+
+.right-arrow {
+  width: 30px;
+  height: 8px;
+  border-bottom: 2px solid #95913f;
+  border-right: 2px solid #95913f;
+  transform: skew(45deg);
+}
